--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,10 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
+    properties:
+        hibernate:
+            dialect: org.hibernate.dialect.MySQLDialect
+
+  web3j:
+    rpc-url: http://localhost:8545 # private network url
